# dcos-thanos

./: .gitignore  README.md
.github/workflows/: main.yml
files/: prometheus.yml  svc.yml
java/scheduler/: build.gradle
java/scheduler/src/main/java/com/mesosphere/sdk/operator/scheduler/: Main.java
universe/: config.json  marathon.json.mustache  package.json  resource.json
utils/fetcher/: Cargo.toml
utils/fetcher/src/: main.rs
utils/grafana-loader/: Cargo.toml
utils/grafana-loader/src/: grafana.rs  main.rs
