[package]
name = "fetcher"
version = "0.1.0"
authors = ["MaibornWolff"]
edition = "2018"


[dependencies]
zip = "0.5.7"
reqwest = {version="0.10.8", default-features=false, features=["blocking", "rustls-tls"]}


[profile.release]
# By default, Cargo instructs compilation units to be compiled and optimized in isolation. LTO instructs the linker to optimize at the link stage. This can, for example, remove dead code and often times reduces binary size.
lto = true
opt-level = 'z'  # Optimize for size.
# By default, Cargo specifies 16 parallel codegen units for release builds. This improves compile times, but prevents some optimizations.
codegen-units = 1
